# text2speech

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  config.yaml  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml  compatibility.yml  docs.yml  lint.yml  tests.yml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/adr/001-audio-queue-manager/: index.html
0.2.0/api/core/: index.html
0.2.0/api/engines/: index.html
0.2.0/api/utils/: index.html
0.2.0/architecture/: index.html
0.2.0/changelog/: index.html
0.2.0/configuration/: index.html
0.2.0/development/contributing/: index.html
0.2.0/development/style-guide/: index.html
0.2.0/en/: index.html
0.2.0/en/adr/001-audio-queue-manager/: index.html
0.2.0/en/api/core/: index.html
0.2.0/en/api/engines/: index.html
0.2.0/en/api/utils/: index.html
0.2.0/en/architecture/: index.html
0.2.0/en/changelog/: index.html
0.2.0/en/configuration/: index.html
0.2.0/en/development/contributing/: index.html
0.2.0/en/development/style-guide/: index.html
0.2.0/en/en/: index.html
0.2.0/en/en/api/core/: index.html
0.2.0/en/en/api/engines/: index.html
0.2.0/en/en/api/utils/: index.html
0.2.0/en/en/architecture/: index.html
0.2.0/en/en/changelog/: index.html
0.2.0/en/en/configuration/: index.html
0.2.0/en/en/development/contributing/: index.html
0.2.0/en/en/development/style-guide/: index.html
0.2.0/en/en/getting-started/: index.html
0.2.0/en/en/installation/: index.html
0.2.0/en/en/metrics/: index.html
0.2.0/en/en/troubleshooting/: index.html
0.2.0/en/en/usage/advanced/: index.html
0.2.0/en/en/usage/basic/: index.html
0.2.0/en/getting-started/: index.html
0.2.0/en/installation/: index.html
0.2.0/en/metrics/: index.html
0.2.0/en/troubleshooting/: index.html
0.2.0/en/usage/advanced/: index.html
0.2.0/en/usage/basic/: index.html
0.2.0/getting-started/: index.html
0.2.0/installation/: index.html
0.2.0/metrics/: index.html
0.2.0/search/: search_index.json
0.2.0/troubleshooting/: index.html
0.2.0/usage/advanced/: index.html
0.2.0/usage/basic/: index.html
docs/: README.md  TESTING.md  api.md  api_reference.md  changelog.md  configuration.md  faq.md  getting-started.md  index.md  installation.md  metrics.md  migration_guide.md  troubleshooting.md
docs/adr/: 001-audio-queue-manager.md
docs/api/: core.md  engines.md  utils.md
docs/architecture/: index.md
docs/development/: contributing.md  style-guide.md
docs/en/: changelog.md  configuration.md  getting-started.md  index.md  installation.md  metrics.md  troubleshooting.md
docs/en/api/: core.md  engines.md  utils.md
docs/en/architecture/: index.md
docs/en/development/: contributing.md  style-guide.md
docs/en/usage/: advanced.md  basic.md
docs/usage/: advanced.md  basic.md
examples/: test_kokoro.py
scripts/: test_elevenlabs.py
tests/: conftest.py  test_audio.py  test_audio_queue.py  test_cli.py  test_config.py  test_engines.py  test_integration.py  test_properties.py  test_text2speech.py  test_text2speech_extended.py
text2speech/: __init__.py  audio_queue.py  cli.py  config.py  constants.py  exceptions.py  logging_utils.py  text2speech.py
text2speech/engines/: __init__.py  base.py  elevenlabs.py  kokoro.py
