[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text2speech"
version = "0.1.0"
description = "Provides text2speech capabilities using ElevenLabs and Kokoro TTS."
authors = [
    { name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "sounddevice>=0.4.0",
    "elevenlabs>=0.2.0",
    "kokoro>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
text2speech = "text2speech.cli:main"

[project.urls]
Homepage = "https://github.com/dgaida/text2speech"
Repository = "https://github.com/dgaida/text2speech"

[tool.setuptools]
packages = ["text2speech"]

[tool.setuptools.package-data]
text2speech = ["py.typed"]

[tool.black]
line-length = 127
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 127
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude examples directory from test collection
norecursedirs = ["examples", ".git", ".tox", "dist", "build", "*.egg"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
